[package]
name = "rustkrazy_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
humantime = "2.1.0"
sys-mount = { version = "2.0.2", default-features = false }
termcolor = "1.1.3"
