[package]
name = "rustkrazy_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
nix = { version = "0.29.0", features = ["reboot", "fs", "signal"] }
sys-mount = { version = "2.0.2", default-features = false }
sysinfo = { version = "0.29.10", default-features = false }
